--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico" />
 <link rel="bookmark" href="favicon.ico" type="image/x-icon"　/>
-<title>Duo, Bin (多 滨)</title>
+<title>无人系统AI大数据创新研究中心（）</title>
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -16,13 +16,13 @@
 <div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
   <!-- 添加二级索引 -->
-<div class="menu-item"><a href="#About Me">About Me</a></div>
-<div class="menu-item"><a href="#Recent News">Recent News</a></div>
-<div class="menu-item"><a href="#Team Introductin">Team Introductin</a></div>
-<div class="menu-item"><a href="#Research Dirction">Research Dirction</a></div>
-<div class="menu-item"><a href="#Research Result">Research Result</a></div>
-<div class="menu-item"><a href="#Scientific Research Project">Scientific Research Project</a></div>
-<div class="menu-item"><a href="#Experimental demonstration">Experimental demonstration</a></div>
+<div class="menu-item"><a href="#Rroup Introductin">团队介绍（Rroup Introductin）</a></div>
+<div class="menu-item"><a href="#Research Dirction">团队研究方向（Research Dirction）</a></div>
+<div class="menu-item"><a href="#Rroup Leader">团队负责人（Rroup Leader）</a></div>
+
+<div class="menu-item"><a href="#Research Result">研究成果（Research Result）</a></div>
+<div class="menu-item"><a href="#Scientific Research Project">科研项目（Scientific Research Project）</a></div>
+<div class="menu-item"><a href="#Experimental demonstration">实验展示（Experimental demonstration）</a></div>
   
 <div class="menu-item"><a href="https://scholar.google.com/citations?user=Bm94cNkAAAAJ&hl=en&inst=6453797383205921872&oi=ao">Google Scholar</a></div>
 <div class="menu-item"><a href="https://www.researchgate1.net/profile/Xiuze-Zhou">ResearchGate</a></div>
@@ -31,50 +31,25 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Duo, Bin (多 滨) </h1>
+<h1>无人系统AI大数据创新研究中心（） </h1>
 </div>
-<table class="imgtable"><tr><td>
-<a href="https://xiuzezhou.github.io/"><img src="photos/duo.jpeg" alt="alt text" width="141px" height="200px" /></a>&nbsp;</td>
-
-        <td align="left"><table class="imgtable">
-                <tr>
-                    <td>
-                        <a href="./"><img src="./Files/gz_photo_square.jpg" alt="" height="175px" /></a>&nbsp;
-                    </td>
-                    <td align="left">
-                        <p>
-                            <a href="./">
-                                <font size="4">Dr. Bin Duo (</font>
-                                <font size="4" ; font style="font-family:Microsoft YaHei">多 滨</font>
-                                <font size="4">)</font>
-                            </a><br />
-                            <i> Ph.D., Professor, Master Tutor </i>
-                            <br /><br />
-                            <a href="https://www.cdut.edu.cn" target="_blank">IIoT Intelligent Monitoring and 
-                              Application Engineering Technology Research Institute of Sichuan Province</a><br />
-                            <a href="https://www.cdut.edu.cn" target="_blank">Chengdu University of Technology</a><br />
-                            <br /> Location: College of Computer Science and Cyber Security, No. 1, Dongsanlu, Erxianqiao, Chenghua
-                            District, Chengdu, China
-                            <br />
-                            <class="staffshortcut">
-                                <A HREF="#About me">About me</A> |
-                                <A HREF="#Recent News">Recent News</A> |
-                                <A HREF="#Team Introductin">Team Introductin</A> |
-                                <A HREF="#Research Dirction">Research Dirction</A> |
-                                <A HREF="#Research Result">Research Result</A> |
-                                <A HREF="#Scientific Research Project">Scientific Research Project</A> 
-                                <A HREF="#Recent selected projects">Projects</A> |
-                                <A HREF="#Experimental demonstration">Experimental demonstration</A> 
-                                <br />
-                                <br /> Email: <a href=mailto:duo_bin@163.com>duo_bin@163.com</a>
-                              <br />
-                         
-                    </td>
-                </tr>
-            </table>
   
-</td></tr></table>
-<h2><a name="About Me">About Me</a></h2>
+<h2><a name="Rroup Introductin">团队介绍（Rroup Introductin）</a></h2>
+<p>基于OpenCV和Qt的人脸识别系统设计，通过综合利用上述技术步骤，实现了从人脸检测到身份识别的全流程。OpenCV作为一个强大的计算机视觉库，提供了丰富的图像处理和机器学习功能，使得人脸检测和特征提取变得更加高效。Qt则是一个跨平台的C++图形用户界面框架，为系统的界面设计和交互提供了便利。两者结合能够构建一个高效、实时、用户友好的系统。
+此外，性能优化也是系统设计中的一个关键方面。通过算法优化、并行处理、硬件加速等方法，可以显著提高人脸识别系统的运行速度和处理能力。例如，使用GPU加速深度学习模型的推理过程，或者通过多线程技术提高图像处理的并发性能，都是常见的优化手段。
+总之，人脸识别技术是一个综合了图像处理、机器学习和计算机视觉的复杂系统。基于OpenCV和Qt的人脸识别系统，通过优化设计和合理应用各类算法，可以实现高效、准确的身份识别，具有广泛的应用前景。</p>
+  
+<h2><a name="Research Dirction">团队研究方向（Research Dirction）</a></h2>
+<ul>
+<li><p>研究小组一：无人系统智能感知与检测</p></li>
+<li><p>研究小组二：智能自主无人集群</p></li>
+<li><p>研究小组三：光机电一体化装备</p></li>
+<li><p>研究小组四：人工智能与智能机器人</p></li>
+<li><p>研究小组五：电力电子先进控制</p></li>
+<li><p>研究小组六：智能无人系统基础理论</p></li>
+</ul> 
+  
+<h2><a name="Rroup Leader">团队负责人（Rroup Leader）</a></h2>
 <p>Bin Duo received his Ph.D. degrees in information and communication engineering
 from Harbin Institute of Technology, China in 2014 and from the University of Sydney, Australia, in 2016. 
 From 2018 to 2019, he visited the Department of Electrical and Computer Engineering, National University of Singapore, Singapore.
@@ -84,23 +59,18 @@ He is currently a Professor with the College of Computer Science and Cyber Secur
 His research interests include convex optimization theory, UAV communications for 6G and information security.<p>
 <p>多滨，男，1982年2月生，汉族，九三学社社员，博士（后），成都理工大学计算机与网络安全学院教授，硕士生导师，物联网与智能科学系副主任，全自主智能无人系统研究中心负责人，四川省海外高层次留学人才、四川省侨联特聘专家，山东产业技术研究院项目研究员，IEEE/CIC/CCF Member。分别于2016年和2014年在悉尼大学和哈尔滨工业大学获得双博士学位；2018年至今在电子科技大学通信抗干扰全国重点实验室从事博士后研究工作；2018年获CSC资助公派至新加坡国立大学电气与计算机工程学院访问。
 近年来，在智能无线通信与网络领域取得了丰硕的研究成果，在IEEE等出版的国内外权威期刊和会议上发表学术论文50余篇，其中SCI检索论文30篇（中科院2区以上论文21篇，ESI热点、高被引论文1篇），EI检索论文18篇，具有较高的影响力，谷歌学术总引用次数千余次，已发表英文学术专著2部，申请专利10余项，获软件著作权20余项。主持和参与国家级、省部级项目等10余项，获得川渝产学研协同创新成果奖、国际会议最佳论文奖、全国大学生学科竞赛优秀指导教师奖、校级青年教师教学竞赛一等奖等10余项，并担任多部国内外权威期刊特约审稿人。
+</p>  
+<p> Email:duo_bin@163.com
 </p>
-<h2><a name="Recent News">Recent News</a></h2>
   
-<h2><a name="Team Introductin">团队介绍</a></h2>
+<h2><a name="Research Result">研究成果(Research Result)</a></h2>
+<h3>1、期刊论文</h3>
+<p>[1]X. Dai, <b>B. Duo</b>, X. Yuan, and M. D. Renzo, "Energy-Efficient UAV Communications in the Presence of Wind: 3D Modeling and Trajectory Design", IEEE Transactions on Wireless Communications, 2023. (SCI, 中科院1区Top，IF = 7.016)</p>
+<p>[2]<b>B. Duo</b>, M. He, Q. Wu*, X. Yuan, and Z. Zhang*, "Joint Dual-UAV Trajectory and RIS Design for ARIS-Assisted Cooperative Aerial Computing in
+IoT", IEEE Internet of Things Journal, 2023. (SCI, 中科院1区Top, IF=10.6)</p>
+<p>[3]Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, J. Li, and Y. Li, "Elevation Angle-Dependent 3D Trajectory Design
+for Aerial RIS-aided Communication", IEEE Transactions on Intelligent Transportation Systems, 2023. (SCI, 中科院1区Top, IF=8.5)</p>
   
-<h2><a name="Research Dirction">团队研究方向</a></h2>
-<ul>
-<li><p>研究小组一：无人系统智能感知与检测</p></li>
-<li><p>研究小组二：智能自主无人集群</p></li>
-<li><p>研究小组三：光机电一体化装备</p></li>
-<li><p>研究小组四：人工智能与智能机器人</p></li>
-<li><p>研究小组五：电力电子先进控制</p></li>
-<li><p>研究小组六：智能无人系统基础理论</p></li>
-</ul> 
-
-<h2><a name="Research Result">研究成果</a></h2>
-<h3>一、期刊论文</h3>
 <ol>
 <li><p>X. Dai, <b>B. Duo</b>, X. Yuan, and M. D. Renzo, "Energy-Efficient UAV Communications in the Presence of Wind: 3D Modeling and Trajectory Design", IEEE Transactions on Wireless Communications, 2023. (SCI, 中科院1区Top，IF = 7.016)</p>
 </li>
@@ -165,9 +135,19 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </ol>
 <p><b>Note</b>: * indicates the corresponding author.</p>
 <p><a href="https://scholar.google.com/citations?user=Bm94cNkAAAAJ&hl=en&inst=6453797383205921872&oi=ao">Full list of publications in Google Scholar</a>.</p> 
-<h3>二、会议论文</h3>
-<h3>三、专著</h3>
-<h3>四、知识产权</h3>
+  
+<h3>2、会议论文</h3>
+  <p>[1]H. Sun, <b>B. Duo</b>*, Z. Wang, X. Lin, and C. Gao, "Aerial cooperative jamming for cellular-enabled UAV secure communication network: Joint trajectory and power control design", <i>Sensors</i>, vol.19, no. 20, pp. 4440, Oct. 2020. (SCI, 中科院2区Top, IF=3.756)</p>
+  <p>[2]<b>B. Duo</b>, Q. Wu*, X. Yuan and R. Zhang, "Energy efficiency maximization for full-duplex UAV secrecy communication", <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 4, pp. 4590-4595, April 2020. (SCI, 中科院2区Top, IF=5.978)</p>
+
+<h3>3、专著</h3>
+<p>[1]S. Li, <b>B. Duo</b>, X. Yuan*, Y. Liang and M. Di Renzo, "Reconfigurable intelligent surface assisted UAV communication: Joint trajectory design and passive beamforming", <i>IEEE Wireless Communications Letters</i>, vol. 9, no. 5, pp. 716-720, May 2020. (SCI, 中科院2区, IF=4.348, ESI高被引)</p>
+<p>[2]S. Li, <b>B. Duo</b>, M. D. Renzo, M. Tao and X. Yuan*, "Robust secure UAV Communications with the aid of reconfigurable intelligent surfaces", <i>IEEE Transactions on Wireless Communications</i>, vol. 20, no. 10, pp. 6402-6417, Dec. 2021. (SCI, 中科院1区Top，IF = 7.016)</p>
+
+  
+<h3>4、知识产权</h3>
+<p>[1]<b>B. Duo</b>, Y. Li, H. Hu, J. Luo, Y. Hu, Z. Wang*, "Joint robust 3D trajectory and communication design for dual-UAV enabled secure communications in probabilistic LoS channel", <i>Ad Hoc Networks</i>, vol. 121, pp. 102592, Oct. 2021. (SCI, 中科院2区, IF=4.11)</p>
+<p>[2]<b>B. Duo</b>, J. Luo, Y. Li, H. Hu and Z. Wang*, "Joint trajectory and power optimization for securing UAV communications against active eavesdropping", <i>China Communications</i>, vol. 18, no. 1, pp. 1673-5447, Jan. 2021. (SCI, 中科院3区, IF=2.688)</p>
 
 <!-- 新增科研项目 -->
 <h2><a name="Scientific Research Project">科研项目</a></h2>
@@ -290,6 +270,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
 
 
