--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico" />
 <link rel="bookmark" href="favicon.ico" type="image/x-icon"　/>
-<title>无人系统AI大数据创新研究中心（）</title>
+<title>无人系统AI大数据创新研究中心（U3IC）</title>
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -270,6 +270,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
 
 
