--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="menu-item"><a href="#Rroup Introductin">团队介绍（Rroup Introductin）</a></div>
 <div class="menu-item"><a href="#Research Dirction">团队研究方向（Research Dirction）</a></div>
 <div class="menu-item"><a href="#Rroup Leader">团队负责人（Rroup Leader）</a></div>
-
+<div class="menu-item"><a href="#Recent News">团队新闻（Recent News）</a></div>
 <div class="menu-item"><a href="#Research Result">研究成果（Research Result）</a></div>
 <div class="menu-item"><a href="#Scientific Research Project">科研项目（Scientific Research Project）</a></div>
 <div class="menu-item"><a href="#Experimental demonstration">实验展示（Experimental demonstration）</a></div>
@@ -62,6 +62,7 @@ His research interests include convex optimization theory, UAV communications fo
 </p>  
 <p> Email:duo_bin@163.com
 </p>
+<h2><a name="Recent News">团队新闻（Recent News）</a></h2>
   
 <h2><a name="Research Result">研究成果(Research Result)</a></h2>
 <h3>1、期刊论文</h3>
@@ -270,6 +271,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
 
 
