--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>无人系统AI大数据创新研究中心（） </h1>
+<h1>无人系统AI大数据创新研究中心（U3IC） </h1>
 </div>
   
 <h2><a name="Rroup Introductin">团队介绍（Rroup Introductin）</a></h2>
@@ -271,6 +271,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
 
 
