--- a/index.html
+++ b/index.html
@@ -71,69 +71,40 @@ His research interests include convex optimization theory, UAV communications fo
 IoT", IEEE Internet of Things Journal, 2023. (SCI, 中科院1区Top, IF=10.6)</p>
 <p>[3]Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, J. Li, and Y. Li, "Elevation Angle-Dependent 3D Trajectory Design
 for Aerial RIS-aided Communication", IEEE Transactions on Intelligent Transportation Systems, 2023. (SCI, 中科院1区Top, IF=8.5)</p>
-  
-<ol>
-<li><p>X. Dai, <b>B. Duo</b>, X. Yuan, and M. D. Renzo, "Energy-Efficient UAV Communications in the Presence of Wind: 3D Modeling and Trajectory Design", IEEE Transactions on Wireless Communications, 2023. (SCI, 中科院1区Top，IF = 7.016)</p>
-</li>
-<li><p><b>B. Duo</b>, M. He, Q. Wu*, X. Yuan, and Z. Zhang*, "Joint Dual-UAV Trajectory and RIS Design for ARIS-Assisted Cooperative Aerial Computing in
-IoT", IEEE Internet of Things Journal, 2023. (SCI, 中科院1区Top, IF=10.6)</p>
-</li>
-<li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, J. Li, and Y. Li, "Elevation Angle-Dependent 3D Trajectory Design
+<p>[4]X. Dai, <b>B. Duo</b>, X. Yuan, and M. D. Renzo, "Energy-Efficient UAV Communications in the Presence of Wind: 3D Modeling and Trajectory Design", IEEE Transactions on Wireless Communications, 2023. (SCI, 中科院1区Top，IF = 7.016)</p>
+<p>[5]<b>B. Duo</b>, M. He, Q. Wu*, X. Yuan, and Z. Zhang*, "Joint Dual-UAV Trajectory and RIS Design for ARIS-Assisted Cooperative Aerial Computing in
+IoT", IEEE Internet of Things Journal, 2023. (SCI, 中科院1区Top, IF=10.6)</p>  
+<p>[6]Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, J. Li, and Y. Li, "Elevation Angle-Dependent 3D Trajectory Design
 for Aerial RIS-aided Communication", IEEE Transactions on Intelligent Transportation Systems, 2023. (SCI, 中科院1区Top, IF=8.5)</p>
-</li>
-<li><p>H. Lai, D. Li*, X. Wang, J. Ning, J. Luo, <b>B. Duo</b>, "Optimization of full-duplex UAV-enabled secrecy communications with the aid of RIS", Drones, 2023.（SCI, 中科院2区, IF=5.538）</p>
-</li>
-<li><p>王豪, 罗俊松，王惠明, 王梓斌, <b>多滨</b>*, "无人机射频指纹识别方法综述", 无线电工程, 2023. (中文核心)</p>
-</li>
-<li><p>A. Shen, J. Luo*, J. Ning, Yi. Li, Z. Wang*, and <b>B. Duo</b>, "Safeguarding UAV Networks against Active Eavesdropping: An Elevation Angle-Distance Trade-off for Secrecy Enhancement", Drones, 2023.（SCI, 中科院2区, IF=5.538）</p>
-</li>
-<li><p>J. Ning, Y.Zhou, X. Liao, and <b>B. Duo</b>*, "Single Remote Sensing Image Dehazing Using Robust Light-dark Prior", 
-Remote Sensing, 2023.（SCI, 中科院2区Top, IF=5.349）</p>
-</li>
-<li><p>K. Tian, <b>B. Duo</b>*, and X. Yuan, "Hybrid Offline-Online Design for Reconfigurable Intelligent Surface Aided UAV Communication", 
+<p>[7]H. Lai, D. Li*, X. Wang, J. Ning, J. Luo, <b>B. Duo</b>, "Optimization of full-duplex UAV-enabled secrecy communications with the aid of RIS", Drones, 2023.（SCI, 中科院2区, IF=5.538）</p>
+<p>[8]王豪, 罗俊松，王惠明, 王梓斌, <b>多滨</b>*, "无人机射频指纹识别方法综述", 无线电工程, 2023. (中文核心)</p>
+<p>[9]A. Shen, J. Luo*, J. Ning, Yi. Li, Z. Wang*, and <b>B. Duo</b>, "Safeguarding UAV Networks against Active Eavesdropping: An Elevation Angle-Distance Trade-off for Secrecy Enhancement", Drones, 2023.（SCI, 中科院2区, IF=5.538）</p>
+<p>[10]J. Ning, Y.Zhou, X. Liao, and <b>B. Duo</b>*, "Single Remote Sensing Image Dehazing Using Robust Light-dark Prior", Remote Sensing, 2023.（SCI, 中科院2区Top, IF=5.349）</p>
+<p>[11]K. Tian, <b>B. Duo</b>*, and X. Yuan, "Hybrid Offline-Online Design for Reconfigurable Intelligent Surface Aided UAV Communication", 
 IEEE Communications Letters, 2023.（SCI, 中科院3区, IF=3.553）</p>
-</li>
-<li><p>Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Enhancing UAV-Enabled Communications via Multiple Intelligent Omni-Surfaces", 
+<p>[12]Y. Lei, <b>B. Duo</b>*, Q. Wu, M. Liu, X. Yuan, and Y. Li, "Enhancing UAV-Enabled Communications via Multiple Intelligent Omni-Surfaces", 
 IEEE Communications Letters, 2023.（SCI, 中科院3区, IF=3.553）</p>
-</li>
-<li><p>付振江, 罗俊松, 宁进, <b>多滨</b>*, "无人机集群通信的应用现状及展望", 无线电工程, 2023. (中文核心)</p>
-</li>
-<li><p>Z. Zhai, X. Dai, <b>B. Duo</b>, Z. Wang and X. Yuan*, "Energy-Efficient UAV-Mounted RIS Assisted
+<p>[13]付振江, 罗俊松, 宁进, <b>多滨</b>*, "无人机集群通信的应用现状及展望", 无线电工程, 2023. (中文核心)</p>
+<p>[14]Z. Zhai, X. Dai, <b>B. Duo</b>, Z. Wang and X. Yuan*, "Energy-Efficient UAV-Mounted RIS Assisted
 Mobile Edge Computing", IEEE Wireless Communications Letters, 2022, 11(12): 2507-2511.（SCI, 中科院2区, IF=5.281）</p>
-</li>
-<li><p>X. Dai, <b>B. Duo</b>, X. Yuan* and W. Tang, "Energy-Efficient UAV Communications: A Generalised Propulsion Energy Consumption Model", IEEE Wireless Communications Letters, 2022, 11(4): 866-870.（SCI, 中科院2区, IF=5.281）</p>
-</li>
-<li><p>M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", IEEE SECON 2022, 2022.（CCF-B）</p>
-</li>
-<li><p>Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, and Y. Li, "Full-Dimensional Rate Enhancement for
+<p>[15]X. Dai, <b>B. Duo</b>, X. Yuan* and W. Tang, "Energy-Efficient UAV Communications: A Generalised Propulsion Energy Consumption Model", IEEE Wireless Communications Letters, 2022, 11(4): 866-870.（SCI, 中科院2区, IF=5.281）</p>
+<p>[16]M. Shao, <b>B. Duo</b>*, Y. Liu, J. Luo, Y. Hu, and M. Liu, "Reconfigurable Intelligent Surface Assisted Data Collection in UAV-Enabled Wireless Sensor Network", IEEE SECON 2022, 2022.（CCF-B）</p>
+<p>[17]Y. Liu, <b>B. Duo</b>*, Q. Wu, X. Yuan, and Y. Li, "Full-Dimensional Rate Enhancement for
 UAV-Enabled Communications via Intelligent Omni-Surface", IEEE Wireless Communications Letters, 2022, 11(9): 1955-1959.（SCI, 中科院2区, IF=5.281）</p>
-</li>
-<li><p>H. Hu, <b>B. Duo</b>*, Y. Li, J. Luo, Y. Hu, and X. Zhu, "Energy Efficiency-Aware Trajectory Design against Jamming
+<p>[18]H. Hu, <b>B. Duo</b>*, Y. Li, J. Luo, Y. Hu, and X. Zhu, "Energy Efficiency-Aware Trajectory Design against Jamming
 Threats for UAV-Assisted Wireless Sensor Networks", China Communications, 2022. (SCI, 中科院3区, IF=2.688)</p>
-</li>
-<li><p>K. Tian, <b>B. Duo</b>, S. Li, X. Yuan*, and Y. Zuo, "Hybrid Uplink and Downlink Transmissions for
+<p>[19]K. Tian, <b>B. Duo</b>, S. Li, X. Yuan*, and Y. Zuo, "Hybrid Uplink and Downlink Transmissions for
 Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wireless Communications Letters, vol. 11, no. 4, pp. 866-870, April 2022. (SCI, 中科院2区, IF=4.348)</p>
-</li>
-<li><p><b>B. Duo</b>, H. Hu, Y. Li, Y. Hu, Xing Zhu*, "Robust 3D trajectory and power design in probabilistic LoS channel for UAV-enabled cooperative jamming", <i>Vehicular Communications</i>, vol. 32, pp. 100387, Dec. 2021. (SCI, 中科院2区, IF=6.91)</p>
-</li>
-<li><p><b>B. Duo</b>, Y. Li, H. Hu, J. Luo, Y. Hu, Z. Wang*, "Joint robust 3D trajectory and communication design for dual-UAV enabled secure communications in probabilistic LoS channel", <i>Ad Hoc Networks</i>, vol. 121, pp. 102592, Oct. 2021. (SCI, 中科院2区, IF=4.11)</p>
-</li>
-</li>
-<li><p><b>B. Duo</b>, J. Luo, Y. Li, H. Hu and Z. Wang*, "Joint trajectory and power optimization for securing UAV communications against active eavesdropping", <i>China Communications</i>, vol. 18, no. 1, pp. 1673-5447, Jan. 2021. (SCI, 中科院3区, IF=2.688)</p>
-</li>
-<li><p><b>B. Duo</b>, H. Hu, Y. Li and X. Yuan*, "Joint trajectory and power optimization in probabilistic LoS channel for UAV-Enabled cooperative jamming", <i>ICC 2021 - IEEE International Conference on Communication</i>, 2021, pp. 1-6.</p>
-</li>
-<li><p>S. Li, <b>B. Duo</b>, M. D. Renzo, M. Tao and X. Yuan*, "Robust secure UAV Communications with the aid of reconfigurable intelligent surfaces", <i>IEEE Transactions on Wireless Communications</i>, vol. 20, no. 10, pp. 6402-6417, Dec. 2021. (SCI, 中科院1区Top，IF = 7.016)</p>
-</li>
-<li><p>S. Li, <b>B. Duo</b>, X. Yuan*, Y. Liang and M. Di Renzo, "Reconfigurable intelligent surface assisted UAV communication: Joint trajectory design and passive beamforming", <i>IEEE Wireless Communications Letters</i>, vol. 9, no. 5, pp. 716-720, May 2020. (SCI, 中科院2区, IF=4.348, ESI高被引)</p>
-</li>
-<li><p><b>B. Duo</b>, Q. Wu, X. Yuan* and R. Zhang, "Anti-jamming 3D trajectory design for UAV-enabled wireless sensor networks under probabilistic LoS channel", <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 12, pp. 16288-16293, Dec. 2020. (SCI, 中科院2区Top, IF=5.978)</p>
-</li>
-<li><p><b>B. Duo</b>, Q. Wu*, X. Yuan and R. Zhang, "Energy efficiency maximization for full-duplex UAV secrecy communication", <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 4, pp. 4590-4595, April 2020. (SCI, 中科院2区Top, IF=5.978)</p>
-</li>
-<li><p>H. Sun, <b>B. Duo</b>*, Z. Wang, X. Lin, and C. Gao, "Aerial cooperative jamming for cellular-enabled UAV secure communication network: Joint trajectory and power control design", <i>Sensors</i>, vol.19, no. 20, pp. 4440, Oct. 2020. (SCI, 中科院2区Top, IF=3.756)</p>
-</li>
-</ol>
+<p>[20]<b>B. Duo</b>, H. Hu, Y. Li, Y. Hu, Xing Zhu*, "Robust 3D trajectory and power design in probabilistic LoS channel for UAV-enabled cooperative jamming", <i>Vehicular Communications</i>, vol. 32, pp. 100387, Dec. 2021. (SCI, 中科院2区, IF=6.91)</p>
+<p>[21]<b>B. Duo</b>, Y. Li, H. Hu, J. Luo, Y. Hu, Z. Wang*, "Joint robust 3D trajectory and communication design for dual-UAV enabled secure communications in probabilistic LoS channel", <i>Ad Hoc Networks</i>, vol. 121, pp. 102592, Oct. 2021. (SCI, 中科院2区, IF=4.11)</p>
+<p>[22]<b>B. Duo</b>, J. Luo, Y. Li, H. Hu and Z. Wang*, "Joint trajectory and power optimization for securing UAV communications against active eavesdropping", <i>China Communications</i>, vol. 18, no. 1, pp. 1673-5447, Jan. 2021. (SCI, 中科院3区, IF=2.688)</p>
+<p>[23]<b>B. Duo</b>, H. Hu, Y. Li and X. Yuan*, "Joint trajectory and power optimization in probabilistic LoS channel for UAV-Enabled cooperative jamming", <i>ICC 2021 - IEEE International Conference on Communication</i>, 2021, pp. 1-6.</p>
+<p>[24]S. Li, <b>B. Duo</b>, M. D. Renzo, M. Tao and X. Yuan*, "Robust secure UAV Communications with the aid of reconfigurable intelligent surfaces", <i>IEEE Transactions on Wireless Communications</i>, vol. 20, no. 10, pp. 6402-6417, Dec. 2021. (SCI, 中科院1区Top，IF = 7.016)</p>
+<p>[25]S. Li, <b>B. Duo</b>, X. Yuan*, Y. Liang and M. Di Renzo, "Reconfigurable intelligent surface assisted UAV communication: Joint trajectory design and passive beamforming", <i>IEEE Wireless Communications Letters</i>, vol. 9, no. 5, pp. 716-720, May 2020. (SCI, 中科院2区, IF=4.348, ESI高被引)</p>
+<p>[26]<b>B. Duo</b>, Q. Wu, X. Yuan* and R. Zhang, "Anti-jamming 3D trajectory design for UAV-enabled wireless sensor networks under probabilistic LoS channel", <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 12, pp. 16288-16293, Dec. 2020. (SCI, 中科院2区Top, IF=5.978)</p>
+<p>[27]<b>B. Duo</b>, Q. Wu*, X. Yuan and R. Zhang, "Energy efficiency maximization for full-duplex UAV secrecy communication", <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 4, pp. 4590-4595, April 2020. (SCI, 中科院2区Top, IF=5.978)</p>
+<p>[28]H. Sun, <b>B. Duo</b>*, Z. Wang, X. Lin, and C. Gao, "Aerial cooperative jamming for cellular-enabled UAV secure communication network: Joint trajectory and power control design", <i>Sensors</i>, vol.19, no. 20, pp. 4440, Oct. 2020. (SCI, 中科院2区Top, IF=3.756)</p>
+
 <p><b>Note</b>: * indicates the corresponding author.</p>
 <p><a href="https://scholar.google.com/citations?user=Bm94cNkAAAAJ&hl=en&inst=6453797383205921872&oi=ao">Full list of publications in Google Scholar</a>.</p> 
   
@@ -271,6 +242,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
 
 
