--- a/index.html
+++ b/index.html
@@ -57,11 +57,18 @@ Since 2018, he has been with the National Laboratory of Science and Technology o
 of Electronic Science and Technology of China, as a Research Fellow.
 He is currently a Professor with the College of Computer Science and Cyber Security, Chengdu University of Technology, Chengdu, China. 
 His research interests include convex optimization theory, UAV communications for 6G and information security.<p>
-<p>多滨，男，1982年2月生，汉族，九三学社社员，博士（后），成都理工大学计算机与网络安全学院教授，硕士生导师，物联网与智能科学系副主任，全自主智能无人系统研究中心负责人，四川省海外高层次留学人才、四川省侨联特聘专家，山东产业技术研究院项目研究员，IEEE/CIC/CCF Member。分别于2016年和2014年在悉尼大学和哈尔滨工业大学获得双博士学位；2018年至今在电子科技大学通信抗干扰全国重点实验室从事博士后研究工作；2018年获CSC资助公派至新加坡国立大学电气与计算机工程学院访问。
-近年来，在智能无线通信与网络领域取得了丰硕的研究成果，在IEEE等出版的国内外权威期刊和会议上发表学术论文50余篇，其中SCI检索论文30篇（中科院2区以上论文21篇，ESI热点、高被引论文1篇），EI检索论文18篇，具有较高的影响力，谷歌学术总引用次数千余次，已发表英文学术专著2部，申请专利10余项，获软件著作权20余项。主持和参与国家级、省部级项目等10余项，获得川渝产学研协同创新成果奖、国际会议最佳论文奖、全国大学生学科竞赛优秀指导教师奖、校级青年教师教学竞赛一等奖等10余项，并担任多部国内外权威期刊特约审稿人。
-</p>  
-<p> Email:duo_bin@163.com
-</p>
+<p>多滨，博士（后），教授，硕士生导师，四川省省级科技领军人才，四川省海外高层次留学人才，成都市科技青年人才，四川省侨联特聘专家，四川省科技协同创新促进会引才引智基地专家顾问。
+  现任成都理工大学网络空间安全系主任，获得校青年骨干教师，校优秀教师，校优秀研究生导师团队骨干成员等奖励。兼任四川省人工智能协会副秘书长，四川省高等院校计算机基础教育学会理事，《计算机科学与探索》期刊青年编委，IEEE会员，CCF会员。
+  主要从事无人系统智能组网与应急通信、异构无人平台跨域协同测绘、无人系统安全、工业大模型等学科交叉研究与应用。</p>  
+  <br>
+<p>先后在悉尼大学和哈尔滨工业大学获得双博士学位，在电子科技大学通信抗干扰全国重点实验室从事博士后研究工作，在新加坡国立大学电气与计算机工程学院公派访问。
+  主持教育教学改革类项目4项，获校青年教师教学竞赛一等奖，培养硕士研究生20余名，其中多人次获国家奖学金、学业奖学金等奖励。</p>
+  <br>
+ <p>近年来在IEEE等出版的国内外权威期刊和会议上发表SCI/EI检索论文80余篇，发表英文学术专著2部，受理专利20余项（授权4项），获软件著作权20项。
+   主持参与国家重点研发计划项目、国家自然科学基金、装备发展部预研项目，四川省重点研发计划项目等10余项。
+   作为主要完成人获得了川渝产学研协同创新成果奖、国际会议最佳论文奖、全国大学生学科竞赛优秀指导教师奖等10余项奖励，并担任多部国内外权威期刊特约审稿人。</p>
+<p> Email:duo_bin@163.com</p>
+  
 <h2><a name="Recent News">团队新闻（Recent News）</a></h2>
   
 <h2><a name="Research Result">研究成果(Research Result)</a></h2>
@@ -242,6 +249,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
 
 
