--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@ From 2018 to 2019, he visited the Department of Electrical and Computer Engineer
 Since 2018, he has been with the National Laboratory of Science and Technology on Communications, the University
 of Electronic Science and Technology of China, as a Research Fellow.
 He is currently a Professor with the College of Computer Science and Cyber Security, Chengdu University of Technology, Chengdu, China. 
-His research interests include convex optimization theory, UAV communications for 6G and information security.<p>
-<p>多滨，博士（后），教授，硕士生导师，四川省省级科技领军人才，四川省海外高层次留学人才，成都市科技青年人才，四川省侨联特聘专家，四川省科技协同创新促进会引才引智基地专家顾问。
-  现任成都理工大学网络空间安全系主任，获得校青年骨干教师，校优秀教师，校优秀研究生导师团队骨干成员等奖励。兼任四川省人工智能协会副秘书长，四川省高等院校计算机基础教育学会理事，《计算机科学与探索》期刊青年编委，IEEE会员，CCF会员。
-  主要从事无人系统智能组网与应急通信、异构无人平台跨域协同测绘、无人系统安全、工业大模型等学科交叉研究与应用。</p>  
+His research interests include convex optimization theory, UAV communications for 6G and information security.</p>
+<p>多滨，男，1982年2月生，汉族，九三学社社员，博士，教授，硕士生导师，四川省省级科技领军人才，四川省海外高层次留学人才，成都市科技青年人才，四川省侨联特聘专家，四川省科技协同创新促进会引才引智基地专家顾问。
+  现任成都理工大学网络空间安全系主任，获得校青年骨干教师，校优秀教师，校优秀研究生导师团队骨干成员等奖励。
+  兼任四川省人工智能协会副秘书长，四川省高等院校计算机基础教育学会理事，《计算机科学与探索》期刊青年编委，IEEE高级会员，CCF高级会员。主要从事具身智能自主无人系统、无人系统智能安全、工业物联网与工业人工智能等学科交叉研究与应用。
+  先后在悉尼大学和哈尔滨工业大学获得双博士学位，在电子科技大学通信抗干扰全国重点实验室从事博士后研究工作，在新加坡国立大学电气与计算机工程学院公派访问。
+  主持教育教学改革类项目5项，获校青年教师教学竞赛一等奖，培养硕士研究生30余名，其中多人次获国家奖学金、学业奖学金、学科竞赛等奖励。近年来在IEEE等出版的国内外权威期刊和会议上发表SCI/EI检索论文100余篇，发表英文学术专著2部，受理专利10余项（授权4项），获软件著作权20余项。
+  先后获得国家自然科学基金、国家重点研发计划、装备发展部共用信息系统装备预研项目、四川省区域创新合作项目、四川省国际科技创新/港澳台科技创新合作项目、四川省重点研发计划项目等10余项项目的支持。
+  作为主要完成人获得2025年中国发明协会发明创业奖创新奖二等奖（排名第2）、2022年度川渝产学研协同创新成果奖三等奖（排名第1）、2023年高级无人飞行系统国际会议最佳论文奖（排名第1）、2025年云计算、大数据应用与软件工程国际学术会议最佳论文奖（通信作者）、中国研究生创新实践系列大赛优秀指导教师奖等10余项奖励，并担任多部国内外权威期刊特约审稿人。
   <br>
-<p>先后在悉尼大学和哈尔滨工业大学获得双博士学位，在电子科技大学通信抗干扰全国重点实验室从事博士后研究工作，在新加坡国立大学电气与计算机工程学院公派访问。
-  主持教育教学改革类项目4项，获校青年教师教学竞赛一等奖，培养硕士研究生20余名，其中多人次获国家奖学金、学业奖学金等奖励。</p>
+<p>个人主页：https://duobin.github.io/</p>
   <br>
- <p>近年来在IEEE等出版的国内外权威期刊和会议上发表SCI/EI检索论文80余篇，发表英文学术专著2部，受理专利20余项（授权4项），获软件著作权20项。
-   主持参与国家重点研发计划项目、国家自然科学基金、装备发展部预研项目，四川省重点研发计划项目等10余项。
-   作为主要完成人获得了川渝产学研协同创新成果奖、国际会议最佳论文奖、全国大学生学科竞赛优秀指导教师奖等10余项奖励，并担任多部国内外权威期刊特约审稿人。</p>
 <p> Email:duo_bin@163.com</p>
   
 <h2><a name="Recent News">团队新闻（Recent News）</a></h2>
@@ -249,6 +249,7 @@ Full-Duplex UAV Communication with Reconfigurable Intelligent Surface", IEEE Wir
 </table>
 </body>
 </html>
+
 
 
 
