--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
       border-bottom: none;
     }
 
+    .direDetailz {
+      text-indent: 2em;
+    }
+
     .news-date {
       font-weight: bold;
       color: #2c3e50;
@@ -305,56 +309,18 @@
 
         <div class="groupIntroduction">
           <h2><a name="U3IC Introduction">团队介绍（U3IC Introduction）</a></h2>
-          <p>
-            &nbsp;&nbsp;
-            无人系统AI大数据创新研究团队依托人工智能与无人系统交叉学科优势及产学研协同创新平台组建，长期聚焦无人系统与人工智能领域前沿技术突破，主攻方向包括异构无人系统跨域协同、无人系统智能组网、无人系统安全、工业人工智能与工业软件，核心技术已广泛服务于应急救援、智慧城市、智能制造、公共安全等关键领域，为行业智能化升级提供核心技术支撑。团队主要成员有9人，包括教授2人，副教授3人，讲师4人，硕士研究生30余人。
-
-          <p>&nbsp;&nbsp;团队在无人系统与AI交叉领域的研究处于国内先进水平，累计在IEEE·TransactionsonWireless Communications、IEETransactions on
-            Intelligent
-            Transportation'SystemsIEEE·Internet·of·Things·Journal、《电信科学》等国内外权威期刊发表SCI/EI论文120余篇(其中二区以上期刊40余篇)，相关成果入选领域高被引论文3篇，累计引用2000余次;承担国家自然科学基金、省部级重点研发计划等项目20余项，获省部级科技进步二等奖2项、三等奖1项。申请国际、国家专利20余项，获软件著作权30余项，研究成果已成功转化应用于10
-            余家行业龙头企业，形成多项核心技术专利与行业解决方案。</p>
-          <p>
-            &nbsp;&nbsp;目前已建成“异构无人平台协同控制实验室”“无人系统协同通信实验平台”“无人系统安全攻防测试平台”和“工业大模型研发与应用中心”4个核心实验平台，涵盖四大研究方向，配备高精度传感器、异构无人装备、边缘计算节点、高性能算力服务器等先进设备,可充分支撑前沿技术研发、教学实践与产学研合作，为青年教师、研究生提供国际化学术视野与高水乎科研实践平台。
-          </p>
-          </p>
+          <div id="intro"></div>
         </div>
         <div class="researchDirection">
           <h2><a name="Research Interests">团队研究方向（Research Interests）</a></h2>
-          <ul>
-            <li>
-              <p>研究方向一:异构无人系统跨域协同关键技术及应用</p>
-              <p>
-                &nbsp;&nbsp;
-                无人机、无人车、无人船等异构无人平台各具优势，但单一平台难以满足复杂任务需求本方向研究异构无人平台跨域协同感知、任务分配、路径规划等关键技术，实现多平台协同作业，提升测绘、物流、巡检、救援等任务的效率和精度。具体研究内容包括:异构无人平台统一建模与协同感知方法、基于任务分解的多平台协同任务分配算法、复杂环境下的多平台协同路径规划与避障策略等。通过构建高效、智能的异构无人平台协同作业系统，为智慧城市、智能交通、资源勘探等领域提供技术支撑。
-              </p>
-            </li>
-            <li>
-              <p>研究方向二:无人系统智能组网与应急通信。</p>
-              <p>
-                &nbsp;&nbsp;
-                随着自然灾害和公共安全事件的频发，传统通信网络在复杂环境下往往面临瘫痪风险难以满足应急通信需求。本方向针对这一挑战，研究无人系统自组织网络、智能路由、协同通信等关键技术，构建高效、可靠、抗毁的无人系统应急通信网络。具体研究内容包括:面向复杂环境的无人系统自组织网络拓扑构建与优化、基于深度强化学习的智能路由算法、多无人系统协同通信协议设计与性能优化等，实现无人系统在无网络覆盖或网络受损情况下的自主组网和可靠通信，为应急救援、灾害监测等场景提供通信保障。
-              </p>
-            </li>
-            <li>
-              <p>研究方向三:无人系统安全</p>
-              <p>
-                &nbsp;&nbsp;
-                无人系统在国防、公共安全等领域的应用日益广泛，其安全问题也日益突出。本方向研究无人系统网络安全、数据安全、工控安全等关键技术，构建无人系统安全防护体系，保障无人系统安全可靠运行。具体研究内容包括:无人系统网络安全威胁分析与防御机制、基于密码学的无人系统数据安全保护技术、无人系统控制安全风险评估与防护策略等。研究目标是提升无人系统在复杂网络环境下的安全防护能力，为无人系统在国防安全、公共安全等领域的应用保驾护航。
-              </p>
-            </li>
-            <li>
-              <p>研究方向四:工业大模型关键技术及应用</p>
-              <p>
-                &nbsp;&nbsp;
-                工业大模型是人工智能与工业领域深度融合的产物，具有广阔的应用前景。本方向研究工业大模型预训练、微调、推理等关键技术，构建面向工业领域的知识图谱和智能决策系统，推动工业智能化升级。具体研究内容包括:面向工业领域的多模态数据预训练方法、基于领域知识的工业大模型微调技术、工业大模型高效推理算法等。通过构建高效、可靠的工业大模型应用平台并研发可信智能工业软件，为智能制造、工业互联网、智慧能源等领域提供智能化解决方案。
-              </p>
-            </li>
+          <ul id="item-list-direction">
           </ul>
         </div>
 
         <div class="groupLeader">
           <h2><a name="U3IC Leader">团队负责人（U3IC Leader）</a></h2>
-          <p>&nbsp;&nbsp; 多滨，博士，教授，硕士生导师，四川省省级科技领军人才，四川省海外高层次留学人才，成都市科技青年人才，四川省侨联特聘专家，四川省科技协同创新促进会引才引智基地专家顾问。
+          <p style="text-indent:2em;">
+            多滨，博士，教授，硕士生导师，四川省省级科技领军人才，四川省海外高层次留学人才，成都市科技青年人才，四川省侨联特聘专家，四川省科技协同创新促进会引才引智基地专家顾问。
             现任成都理工大学网络空间安全系主任，获得校青年骨干教师，校优秀教师，校优秀研究生导师团队骨干成员等奖励。
             兼任四川省人工智能协会副秘书长，四川省高等院校计算机基础教育学会理事，《计算机科学与探索》期刊青年编委，IEEE高级会员，CCF高级会员。主要从事具身智能自主无人系统、无人系统智能安全、工业物联网与工业人工智能等学科交叉研究与应用。
             先后在悉尼大学和哈尔滨工业大学获得双博士学位，在电子科技大学通信抗干扰全国重点实验室从事博士后研究工作，在新加坡国立大学电气与计算机工程学院公派访问。
@@ -399,7 +365,7 @@
           <h2><a name="Research Achievements">研究成果(Research Achievements)</a></h2>
           <div class="section">
             <h2>1、期刊论文</h2>
-            <div class="stats" id="qikan-stats">共73篇论文</div>
+            <div class="stats" id="qikan-stats">共{{ qikanData.length}}篇论文</div>
             <div id="qikan-list-container"></div>
             <div class="pagination-controls">
               <button id="qikan-prev-page" disabled>上一页</button>
@@ -423,7 +389,7 @@
           </div>
           <div class="section">
             <h2>2、会议论文</h2>
-            <div class="stats" id="huiyi-stats">共10篇论文</div>
+            <div class="stats" id="huiyi-stats">共{{huiyiData.length}}篇论文</div>
             <div id="huiyi-list-container"></div>
             <div class="pagination-controls">
               <button id="huiyi-prev-page" disabled>上一页</button>
@@ -442,7 +408,7 @@
           </div>
           <div class="section">
             <h2>3、专著</h2>
-            <div class="stats" id="zhuanzhu-stats">共2篇专著</div>
+            <div class="stats" id="zhuanzhu-stats">共{{zhuanzhuData.length}}篇专著</div>
             <div id="zhuanzhu-list-container"></div>
             <div class="pagination-controls">
               <button id="zhuanzhu-prev-page" disabled>上一页</button>
@@ -460,7 +426,7 @@
           </div>
           <div class="section">
             <h3>4、知识产权</h3>
-            <div class="stats" id="ip-stats">共2项知识产权</div>
+            <div class="stats" id="ip-stats">共{{ipData.length}}项知识产权</div>
             <div id="ip-list-container"></div>
             <div class="pagination-controls">
               <button id="ip-prev-page" disabled>上一页</button>
@@ -483,30 +449,30 @@
               <div class="award-category">
                 <h4>学生获奖</h4>
                 <!-- <div class="award-item">
-                                              <div class="award-title">"挑战杯"全国大学生课外学术科技作品竞赛一等奖</div>
-                                              <div class="award-detail">团队成员：张三、李四、王五</div>
-                                              <div class="award-year">2024年</div>
-                                            </div> -->
+                  <div class="award-title">"挑战杯"全国大学生课外学术科技作品竞赛一等奖</div>
+                  <div class="award-detail">团队成员：张三、李四、王五</div>
+                  <div class="award-year">2024年</div>
+                </div> -->
               </div>
 
               <div class="award-category">
                 <h4>教师获奖</h4>
                 <!-- <div class="award-item">
-                                              <div class="award-title">中国发明协会发明创业奖创新奖二等奖</div>
-                                              <div class="award-detail">项目：面向无人系统的智能感知与决策技术</div>
-                                              <div class="award-year">2025年</div>
-                                            </div> -->
+                  <div class="award-title">中国发明协会发明创业奖创新奖二等奖</div>
+                  <div class="award-detail">项目：面向无人系统的智能感知与决策技术</div>
+                  <div class="award-year">2025年</div>
+                </div> -->
               </div>
             </div>
 
             <div class="award-category">
               <h4>团队荣誉</h4>
               <!-- <div class="award-item">
-                                            <div class="award-title">高级无人飞行系统国际会议最佳论文奖</div>
-                                            <div class="award-detail">论文：Elevation Angle-Dependent 3D Trajectory Design for Aerial RIS-aided
-                                              Communication</div>
-                                            <div class="award-year">2023年</div>
-                                          </div> -->
+                <div class="award-title">高级无人飞行系统国际会议最佳论文奖</div>
+                <div class="award-detail">论文：Elevation Angle-Dependent 3D Trajectory Design for Aerial RIS-aided
+                  Communication</div>
+                <div class="award-year">2023年</div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -630,152 +596,8 @@
 </body>
 
 <script type="module">
-  import { ipData, qikanData, huiyiData, zhuanzhuData } from "./data/data.js"
-
-
-  // 分页管理类
-  class PaginationManager {
-    constructor(data, containerId, config) {
-      this.data = data;
-      this.containerId = containerId;
-      this.currentPage = 1;
-      this.itemsPerPage = config.itemsPerPage || 10;
-      this.prevButtonId = config.prevButtonId;
-      this.nextButtonId = config.nextButtonId;
-      this.currentPageElementId = config.currentPageElementId;
-      this.totalPagesElementId = config.totalPagesElementId;
-      this.pageSizeSelectId = config.pageSizeSelectId;
-      this.statsElementId = config.statsElementId;
-
-      this.init();
-    }
-
-    init() {
-      this.updateStats();
-      this.displayCurrentPage();
-      this.setupEventListeners();
-    }
-
-    getTotalPages() {
-      return Math.ceil(this.data.length / this.itemsPerPage);
-    }
-
-    generateItemNumber(index) {
-      return index + 1;
-    }
-
-    displayCurrentPage() {
-      const startIndex = (this.currentPage - 1) * this.itemsPerPage;
-      const endIndex = startIndex + this.itemsPerPage;
-      const currentPageData = this.data.slice(startIndex, endIndex);
-
-      const container = document.getElementById(this.containerId);
-      container.innerHTML = '';
-
-      currentPageData.forEach((item, index) => {
-        const globalIndex = startIndex + index;
-        const itemNumber = this.generateItemNumber(globalIndex);
-
-        const itemElement = document.createElement('div');
-        itemElement.className = 'paper-item';
-        itemElement.innerHTML = `
-                        <p>
-                            <span class="paper-number">[${itemNumber}]</span>
-                            ${item}
-                        </p>
-                    `;
-        container.appendChild(itemElement);
-      });
-
-      this.updatePaginationInfo();
-    }
-
-    updatePaginationInfo() {
-      const totalPages = this.getTotalPages();
-
-      document.getElementById(this.currentPageElementId).textContent = this.currentPage;
-      document.getElementById(this.totalPagesElementId).textContent = totalPages;
-
-      // 更新按钮状态
-      document.getElementById(this.prevButtonId).disabled = this.currentPage === 1;
-      document.getElementById(this.nextButtonId).disabled = this.currentPage === totalPages;
-    }
-
-    updateStats() {
-      if (this.statsElementId) {
-        document.getElementById(this.statsElementId).textContent = `共${this.data.length}篇论文`;
-      }
-    }
-
-    setupEventListeners() {
-      document.getElementById(this.prevButtonId).addEventListener('click', () => {
-        if (this.currentPage > 1) {
-          this.currentPage--;
-          this.displayCurrentPage();
-        }
-      });
-
-      document.getElementById(this.nextButtonId).addEventListener('click', () => {
-        if (this.currentPage < this.getTotalPages()) {
-          this.currentPage++;
-          this.displayCurrentPage();
-        }
-      });
-
-      document.getElementById(this.pageSizeSelectId).addEventListener('change', (e) => {
-        this.itemsPerPage = parseInt(e.target.value);
-        this.currentPage = 1;
-        this.displayCurrentPage();
-      });
-    }
-  }
-
-  // 页面加载完成后初始化所有分页管理器
-  document.addEventListener('DOMContentLoaded', function () {
-    // 期刊论文分页
-    new PaginationManager(qikanData, 'qikan-list-container', {
-      itemsPerPage: 10,
-      prevButtonId: 'qikan-prev-page',
-      nextButtonId: 'qikan-next-page',
-      currentPageElementId: 'qikan-current-page',
-      totalPagesElementId: 'qikan-total-pages',
-      pageSizeSelectId: 'qikan-page-size-select',
-      statsElementId: 'qikan-stats'
-    });
-
-    // 会议论文分页
-    new PaginationManager(huiyiData, 'huiyi-list-container', {
-      itemsPerPage: 5,
-      prevButtonId: 'huiyi-prev-page',
-      nextButtonId: 'huiyi-next-page',
-      currentPageElementId: 'huiyi-current-page',
-      totalPagesElementId: 'huiyi-total-pages',
-      pageSizeSelectId: 'huiyi-page-size-select',
-      statsElementId: 'huiyi-stats'
-    });
-
-    // 专著分页
-    new PaginationManager(zhuanzhuData, 'zhuanzhu-list-container', {
-      itemsPerPage: 5,
-      prevButtonId: 'zhuanzhu-prev-page',
-      nextButtonId: 'zhuanzhu-next-page',
-      currentPageElementId: 'zhuanzhu-current-page',
-      totalPagesElementId: 'zhuanzhu-total-pages',
-      pageSizeSelectId: 'zhuanzhu-page-size-select',
-      statsElementId: 'zhuanzhu-stats'
-    });
-
-    // 知识产权分页
-    new PaginationManager(ipData, 'ip-list-container', {
-      itemsPerPage: 5,
-      prevButtonId: 'ip-prev-page',
-      nextButtonId: 'ip-next-page',
-      currentPageElementId: 'ip-current-page',
-      totalPagesElementId: 'ip-total-pages',
-      pageSizeSelectId: 'ip-page-size-select',
-      statsElementId: 'ip-stats'
-    });
-  });
+  import { ipData, qikanData, huiyiData, zhuanzhuData } from "./data/Achievements.js"
 </script>
+<script type="module" src="./data/baseData.js"></script>
 
 </html>
