--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     body {
       margin: 0;
       padding: 0;
+      font-family: 'SimSun', '宋体', serif;
     }
 
     #tlayout {
@@ -601,3 +602,4 @@
 <script type="module" src="./data/baseData.js"></script>
 
 </html>
+
