--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     .layout-content {
       margin-left: 17%;
       width: 83%;
-      padding: 20px;
+      padding: 30px 60px;
       text-align: left;
       height: 100vh;
       overflow-y: auto;
@@ -602,4 +602,5 @@
 <script type="module" src="./data/baseData.js"></script>
 
 </html>
+
 
